syntax = "proto3";
package aggregates;

option go_package = "./pb";

message ActionAggregate {
  uint32 SerializedKey = 1;
  uint32 Data = 2;
}

message TypeAggregate {
  repeated ActionAggregate Count = 1;
  repeated ActionAggregate Sum = 2;
}
